# xDAN-SmartDoc-Flow

./: .dockerignore  API_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.fastapi  README-FASTAPI.md  README.md  api_example.md  docker-compose.yml  fastapi_client_example.py  fastapi_pdf_server.py  pyproject.toml  read.md  requirements-api-server.txt  requirements-api.txt  requirements-fastapi.txt  start_api.sh  start_document_api.sh  start_document_api_remote.sh  start_pdf_api_server.sh  start_vllm_a100.sh  start_vllm_server.sh  vllm_config.env  vllm_config_a100.env  使用方式.md  官方使用指南.md
.github/workflows/: docker.yml
eval/: eval.sh  eval_element_merge_detect.py  eval_html_table_merge.py  eval_page_to_markdown.py  eval_page_to_markdown_nanonets.py  eval_page_to_markdown_olmocr.py  eval_table_to_html.py  eval_table_to_html_nanonets.py  eval_table_to_html_olmocr.py  gen_element_merge_detect_data.py  gen_html_table_merge_data.py
ocrflux/: adapters.py  api_server.py  check.py  client.py  config.py  document_api_server.py  document_api_server_remote.py  image_utils.py  inference.py  jsonl_to_markdown.py  pipeline.py  prompts.py  server.sh  table_format.py  work_queue.py
tmp_1/: work_index_list.csv.zstd
tmp_1/markdowns/1/: 1.md
tmp_1/results/: output_4ae119b2c44d5fe6da128d956556d4656b03dc86.jsonl
tmp_2/: work_index_list.csv.zstd
